change to knite f3

--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -1,10 +1,10 @@
-<footer class="krypton-footer">
+<footer class="knite f3-footer">
     <div class="container">
         <!-- Logo -->
         <div class="footer-logo">
             <a href="#">
-                <img class="rotating" src="/img/logo/krypton-gradient.svg" alt="">
-                <div class="brand-name">Krypton</div>
+                <img class="rotating" src="/img/logo/knite f3-gradient.svg" alt="">
+                <div class="brand-name">knite f3</div>
                 <div class="brand-subtitle">Blockchain brought to another level</div>
             </a>
         </div>
@@ -34,7 +34,7 @@
                         <!-- Field -->
                         <div class="control">
                             <!-- Special input -->
-                            <input class="krypton-subscribe-input" type="email" name="email" placeholder="">
+                            <input class="knite f3-subscribe-input" type="email" name="email" placeholder="">
                             <button class="subscribe-button">
                                 <span>Subscribe</span>
                             </button>
@@ -60,7 +60,7 @@
             </div>
         </div>
         <!-- Copyright -->
-        <p class="k-copyright">© 2018-2022 | Krypton. All Rights Reserved</p>
+        <p class="k-copyright">© 2018-2022 | knite f3. All Rights Reserved</p>
         <br>
         <!-- Made by -->
         <p class="coded-by">Designed and Coded by <a href="https://cssninja.io" target="_blank">Css Ninja</a></p>
