--- a/src/scss/abstracts/_colors.scss
+++ b/src/scss/abstracts/_colors.scss
@@ -1,7 +1,7 @@
-/*! _colors.scss | Krypton | CSS Ninja */
+/*! _colors.scss | knite f3 | CSS Ninja */
 
 /* ==========================================================================
-Krypton global colors 
+knite f3 global colors 
 ========================================================================== */
 
 /***
