--- a/src/scss/components/_forms.scss
+++ b/src/scss/components/_forms.scss
@@ -1,4 +1,4 @@
-/*! _forms.scss | Krypton | CSS Ninja */
+/*! _forms.scss | knite f3 | CSS Ninja */
 
 /* ==========================================================================
 Form components styles
