--- a/src/scss/layout/_footer.scss
+++ b/src/scss/layout/_footer.scss
@@ -1,4 +1,4 @@
-/*! _footer.scss | Krypton | CSS Ninja */
+/*! _footer.scss | knite f3 | CSS Ninja */
 
 /* ==========================================================================
 Footer styles
@@ -7,15 +7,15 @@ Footer styles
 /***
 TABLE OF CONTENTS
 =============================================================================
-0. Krypton footer
+0. knite f3 footer
 =============================================================================
 ***/
 
 /* ==========================================================================
-0. Krypton footer
+0. knite f3 footer
 ========================================================================== */
 
-.krypton-footer {
+.knite f3-footer {
     padding: 100px 40px;
     background: #0f0330;
     text-align: center;
@@ -81,7 +81,7 @@ TABLE OF CONTENTS
                 width: 100%;
 
                 //Input
-                .krypton-subscribe-input {
+                .knite f3-subscribe-input {
                     height: 50px;
                     width: 100%;
                     background: rgba(17, 149, 247, 0.08);
