--- a/src/partials/navbar.html
+++ b/src/partials/navbar.html
@@ -7,8 +7,8 @@
         <!-- Brand -->
         <div class="navbar-brand">
             <a href="index.html" class="navbar-item">
-                <img class="rotating" src="/img/logo/krypton.svg" alt="">
-                <span class="brand-name">Krypton</span>
+                <img class="rotating" src="/img/logo/knite f3.svg" alt="">
+                <span class="brand-name">knite f3</span>
             </a>
             <!-- Responsive toggle -->
             <div class="navbar-burger" @click="openMobileMenu()">
