--- a/src/scss/layout/_blog.scss
+++ b/src/scss/layout/_blog.scss
@@ -1,4 +1,4 @@
-/*! _blog.scss | Krypton | CSS Ninja */
+/*! _blog.scss | knite f3 | CSS Ninja */
 
 /* ==========================================================================
 Blog Posts
