--- a/src/scss/layout/_pageloader.scss
+++ b/src/scss/layout/_pageloader.scss
@@ -1,4 +1,4 @@
-/*! _pageloader.scss | Krypton | CSS Ninja */
+/*! _pageloader.scss | knite f3 | CSS Ninja */
 
 /* ==========================================================================
 Pageloader styles
