--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -1,4 +1,4 @@
-/*! core.scss | Krypton | CSS Ninja */
+/*! core.scss | knite f3 | CSS Ninja */
 
 /* ==========================================================================
 Core 
