--- a/src/scss/abstracts/_colors.scss
+++ b/src/scss/abstracts/_colors.scss
@@ -1,4 +1,4 @@
-/*! _colors.scss | knite f3 | CSS Ninja */
+/*! _colors.scss | knite f3 | midhun cp */
 
 /* ==========================================================================
 knite f3 global colors 
