--- a/src/scss/components/_buttons.scss
+++ b/src/scss/components/_buttons.scss
@@ -1,4 +1,4 @@
-/*! _buttons.scss | knite f3 | CSS Ninja */
+/*! _buttons.scss | knite f3 | midhun cp */
 
 /* ==========================================================================
 Button styles
