--- a/src/scss/layout/_faq.scss
+++ b/src/scss/layout/_faq.scss
@@ -1,4 +1,4 @@
-/*! _faq.scss | knite f3 | CSS Ninja */
+/*! _faq.scss | knite f3 | midhun cp */
 
 /* ==========================================================================
 FAQ section styles
