--- a/src/scss/layout/_features.scss
+++ b/src/scss/layout/_features.scss
@@ -1,4 +1,4 @@
-/*! _features.scss | knite f3 | CSS Ninja */
+/*! _features.scss | knite f3 | midhun cp */
 
 /* ==========================================================================
 Features elements styles
