--- a/src/scss/layout/_layout.scss
+++ b/src/scss/layout/_layout.scss
@@ -1,4 +1,4 @@
-/*! _layout.scss | knite f3 | CSS Ninja */
+/*! _layout.scss | knite f3 | midhun cp */
 
 /* ==========================================================================
 Layout styles
