--- a/src/scss/layout/_team.scss
+++ b/src/scss/layout/_team.scss
@@ -1,4 +1,4 @@
-/*! _team.scss | knite f3 | CSS Ninja */
+/*! _team.scss | knite f3 | midhun cp */
 
 /* ==========================================================================
 Team section styles
