--- a/src/scss/abstracts/_animations.scss
+++ b/src/scss/abstracts/_animations.scss
@@ -1,4 +1,4 @@
-/*! _animations.scss | knite f3 | CSS Ninja */
+/*! _animations.scss | knite f3 | midhun cp */
 
 /* ==========================================================================
 Animations
