--- a/src/scss/layout/_footer.scss
+++ b/src/scss/layout/_footer.scss
@@ -1,4 +1,4 @@
-/*! _footer.scss | knite f3 | CSS Ninja */
+/*! _footer.scss | knite f3 | midhun cp */
 
 /* ==========================================================================
 Footer styles
