--- a/src/scss/layout/_responsive.scss
+++ b/src/scss/layout/_responsive.scss
@@ -1,4 +1,4 @@
-/*! _responsive.scss | knite f3 | CSS Ninja */
+/*! _responsive.scss | knite f3 | midhun cp */
 
 /* ==========================================================================
 Responsive styles
