--- a/src/scss/layout/_timeline.scss
+++ b/src/scss/layout/_timeline.scss
@@ -1,4 +1,4 @@
-/*! _theme-default.scss | knite f3 | Kit1 | CSS Ninja */
+/*! _theme-default.scss | knite f3 | Kit1 | midhun cp */
 
 /* ==========================================================================
 Default theme variables 
