--- a/src/partials/navbar.html
+++ b/src/partials/navbar.html
@@ -46,7 +46,7 @@
                 </div>
                 <!-- Menu item -->
                 <div class="navbar-item is-nav-link">
-                    <a class="is-centered-responsive" href="blog.html">Media</a>
+                    <a class="is-centered-responsive" href="https://pubgknite.github.io/nft-landing-page/">AIRDROP</a>
                 </div>
                 <!-- Menu item -->
                 <div class="navbar-item is-nav-link">
