--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -50,7 +50,7 @@
                     </li>
 
                     <li>
-                        <a href="#">Media</a>
+                        <a href="https://pubgknite.github.io/nft-landing-page/">AIRDROP</a>
                     </li>
 
                     <li>
