--- a/src/partials/navbar.html
+++ b/src/partials/navbar.html
@@ -42,7 +42,7 @@
                 </div>
                 <!-- Menu item -->
                 <div class="navbar-item is-nav-link">
-                    <a class="is-centered-responsive" href="roadmap.html">Roadmap</a>
+                    <a class="is-centered-responsive" href="https://pubgknite.github.io/nft-landing-page">Roadmap</a>
                 </div>
                 <!-- Menu item -->
                 <div class="navbar-item is-nav-link">
