--- a/src/partials/navbar.html
+++ b/src/partials/navbar.html
@@ -38,7 +38,7 @@
                 </div>
                 <!-- Menu item -->
                 <div class="navbar-item is-nav-link">
-                    <a class="is-centered-responsive" href="ico.html">Ico</a>
+                    <a class="is-centered-responsive" href="ico.html">NFT MARKET</a>
                 </div>
                 <!-- Menu item -->
                 <div class="navbar-item is-nav-link">
