--- a/src/partials/navbar-clone.html
+++ b/src/partials/navbar-clone.html
@@ -38,6 +38,10 @@
                 </div>
                 <!-- Menu item -->
                 <div class="navbar-item is-nav-link">
+                    <a class="is-centered-responsive" href="NFT.html">NFT</a>
+                </div>
+                <!-- Menu item -->
+                <div class="navbar-item is-nav-link">
                     <a class="is-centered-responsive" href="ico.html">Ico</a>
                 </div>
                 <!-- Menu item -->
