--- a/src/partials/navbar.html
+++ b/src/partials/navbar.html
@@ -42,6 +42,10 @@
                 </div>
                 <!-- Menu item -->
                 <div class="navbar-item is-nav-link">
+                    <a class="is-centered-responsive" href="NFT.html">NFT</a>
+                </div>
+                <!-- Menu item -->
+                <div class="navbar-item is-nav-link">
                     <a class="is-centered-responsive" href="https://pubgknite.github.io/nft-landing-page">Roadmap</a>
                 </div>
                 <!-- Menu item -->
