--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -46,7 +46,7 @@
             <div class="column is-4">
                 <ul class="footer-links">
                     <li>
-                        <a href="#">Register</a>
+                        <a href="#">NFTS MARKET</a>
                     </li>
 
                     <li>
