--- a/src/partials/navbar.html
+++ b/src/partials/navbar.html
@@ -62,7 +62,7 @@
                 <!-- Sign up -->
                 <div class="navbar-item">
                     <a href="#" class="button k-button k-primary raised has-gradient slanted">
-                        <span class="text">Register</span>
+                        <span class="text">NFTS MARKET</span>
                         <span class="front-gradient"></span>
                     </a>
                 </div>
